--- a/microblog/app/templates/user.html
+++ b/microblog/app/templates/user.html
@@ -3,17 +3,26 @@
   <tr valign="top">
     <td><img src="{{ user.avatar(128) }}" /></td>
     <td>
-      <h1>使用者：{{ user.username }}</h1>
-      {% if user.about_me %}
-      <p>{{ user.about_me }}</p>
-      {% endif %} {% if user.last_seen %}
-      <p>最後出現於：{{ user.last_seen }}</p>
-      {% endif %}
-      <!-- 這裡添加了缺失的 endif 標籤 -->
-
+      <h1> 使用者：{{ user.username }}</h1>
+      {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+      {% if user.last_seen %}<p > 最後上線時間：{{ user.last_seen }}</p>{% endif %}
+      <p>{{ user.followers_count() }} 位追蹤者，追蹤中 {{ user.following_count() }} 位。</p>
       {% if user == current_user %}
       <p><a href="{{ url_for('edit_profile') }}"> 編輯你的個人資料 </a></p>
-      {% endif %}
+      {% elif not current_user.is_following(user) %}
+      <p>
+          <form action="{{ url_for('follow', username=user.username) }}" method="post">
+              {{form.hidden_tag() }}
+              {{form.submit(value='追蹤') }}
+          </form>
+      </p>
+      {% else %}
+      <p>
+          <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+              {{form.hidden_tag() }}
+              {{form.submit(value='取消追蹤') }}
+          </form>
+      </p>      {% endif %}
     </td>
   </tr>
 </table>
