--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -10,6 +10,7 @@
     <div>
       微網誌：
       <a href="{{ url_for('index') }}"> 首頁 </a>
+      <a href="{{ url_for('explore') }}"> 探索 </a>
       {% if current_user.is_anonymous %}
       <a href="{{ url_for('login') }}"> 登入 </a>
       {% else %}
