--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -25,6 +25,9 @@
     <input type="submit" value="Loin In" />
   </p>
 </form>
-
+<p>
+  忘記你的密碼了嗎？
+  <a href="{{ url_for('reset_password_request') }}"> 點擊這裡重設 </a>
+</p>
 <p>新使用者？ <a href="{{ url_for('register') }}"> 點擊註冊！</a></p>
 {% endblock %}
