--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -1,20 +1,22 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% import "bootstrap_wtf.html" as wtf %} {% block
+content %}
 <h1>Hi, {{ current_user.username }}!</h1>
-{% if form %}
-<form action="" method="post">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.post.label }}<br />
-    {{ form.post(cols=32, rows=4) }}<br />
-    {% for error in form.post.errors %}
-    <span style="color: red">[{{ error }}]</span>
-    {% endfor %}
-  </p>
-  <p>{{ form.submit() }}</p>
-</form>
-{% endif %} {% for post in posts %} {% include '_post.html' %} {% endfor %} {%
-if prev_url %}
-<a href="{{ prev_url }}">較新的貼文</a>
-{% endif %} {% if next_url %}
-<a href="{{ next_url }}">較舊的貼文</a>
-{% endif %} {% endblock %}
+{% if form %} {{ wtf.quick_form(form) }} {% endif %} {% for post in posts %} {%
+include '_post.html' %} {% endfor %}
+
+<nav aria-label="帖子導航">
+  <ul class="pagination">
+    <li class="page-item{% if not prev_url %} disabled{% endif %}">
+      <a class="page-link" href="{{ prev_url}}">
+        <span aria-hidden="true">&larr;</span> 較新的帖子
+      </a>
+    </li>
+    <li class="page-item{% if not next_url %} disabled{% endif %}">
+      <a class="page-link" href="{{ next_url}}">
+        較舊的帖子 <span aria-hidden="true">&rarr;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+{% endblock %}
