--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -1,33 +1,58 @@
 {% extends "base.html" %} {% block content %}
-<h1>Register</h1>
-<form action="" method="post">
-  <!-- CSRF Token -->
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+<div class="container d-flex justify-content-center">
+  <div class="card text-center">
+    <div class="card-body" style="background-color: hsl(206, 89%, 93%);">
+      <h1 class="mb-4">歡迎登入</h1>
+      <form action="" method="post">
+        <!-- CSRF Token -->
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+        <div class="row no-gutters mb-4">
+          <div class="col-4 text-end">
+            <label for="username">Username:</label>
+          </div>
+          <div class="col-8">
+            <input
+              type="text"
+              id="username"
+              name="username"
+              size="32"
+              required
+              class="form-control"
+              style="border-color: #282c57"
+            />
+            {% if username_error %}
+            <div class="text-danger mt-2">[{{ username_error }}]</div>
+            {% endif %}
+          </div>
+        </div>
 
-  <p>
-    <label for="username">Username:</label><br />
-    <input type="text" id="username" name="username" size="32" required /><br />
-    {% if username_error %}
-    <span style="color: red">[{{ username_error }}]</span>
-    {% endif %}
-  </p>
-
-  <p>
-    <label for="password"
-      >Password:<input type="password" name="password"
-    /></label>
-    <br />
-    {% if password_error %}
-    <span style="color: red">[{{ password_error }}]</span>
-    {% endif %}
-  </p>
-  <p>
-    <input type="submit" value="Loin In" />
-  </p>
-</form>
-<p>
-  忘記你的密碼了嗎？
-  <a href="{{ url_for('reset_password_request') }}"> 點擊這裡重設 </a>
-</p>
-<p>新使用者？ <a href="{{ url_for('register') }}"> 點擊註冊！</a></p>
-{% endblock %}
+        <div class="row no-gutters mb-4">
+          <div class="col-4 text-end">
+            <label for="password"
+              >Password:
+          </div>
+          <div class="col-8">
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              style="border-color: #282c57"
+            />
+            {% if password_error %}
+            <span style="color: red">[{{ password_error }}]</span>
+            {% endif %}
+          </div>
+        </div>
+        <input class="btn btn-primary mb-3" type="submit" value="Loin In" />
+        </p>
+      </form>
+      <p>
+        忘記你的密碼了嗎？
+        <a href="{{ url_for('reset_password_request') }}"> 點擊這裡重設 </a>
+      </p>
+      <p>新使用者？ <a href="{{ url_for('register') }}"> 點擊註冊！</a></p>
+      {% endblock %}
+    </div>
+  </div>
+</div>
